--- a/css/starter-template.css
+++ b/css/starter-template.css
@@ -8,9 +8,18 @@ body {
   text-align: center;
 }
 
+.starter-template img {
+    width: 60%;
+    height: auto;
+}
+
 
 @media only screen and (max-width: 600px) {
     .starter-template {
         padding: 0.2rem;
     }
+    .starter-template img {
+    width: 90%;
+    height: auto;
+}
 }
